--- a/geoportal/val/visor.html
+++ b/geoportal/val/visor.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Geoportal de Torrent - Visor de cartografía y consultas interactivo</title>
+<title>Geoportal de Torrent - Visor de cartografia i consultes interactiu</title>
 <meta name="description" content="Tu portal de Información Geográfica">
 <!-- Para dispositivos móviles -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -26,10 +26,14 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/styles/default.min.css">
 
 <!-- LayerSwitcher CSS -->
-<link rel="stylesheet" href="/javascripts/plugins/ol3-layerswitcher/src/ol3-layerswitcher.css">
+<link rel="stylesheet" href="/javascripts/plugins/ol3-ext/control/layerswitchercontrol.css">
+
+<link rel="stylesheet" href="/javascripts/plugins/ol3-contextmenu/build/ol3-contextmenu.min.css">
+
+<link rel="stylesheet" href="/javascripts/plugins/ol3-geocoder/build/ol3-geocoder.min.css">
 
 <!-- OpenLayers CSS -->
-<link rel="stylesheet" href="/javascripts/plugins/ol3/ol.css" type="text/css">
+<link rel="stylesheet" href="/javascripts/plugins/ol3/css/ol.css" type="text/css">
 
 <!-- CSS OpenLayers Popup -->
 <link rel="stylesheet" href="http://openlayers.org/en/v3.11.0/examples/popup.css">
@@ -49,16 +53,19 @@
 </head>
 
 <body class="no-trans" style="margin-top: -10px;">
-	<div style="background: rgba(255,255,255, 1); top: 0px !important; box-shadow: 5px 0px 15px 1px rgba(50, 50, 50, 0.5);" class="col-xs-7 col-sm-3 col-md-2 sidebar sidebar-left sidebar-animate">
+	<div style="background: rgba(255,255,255, 1); top: 0px !important; box-shadow: 5px 0px 15px 1px rgba(50, 50, 50, 0.5); padding : 0px; bottom : 1.5em; min-height : 0px;" class="col-xs-7 col-sm-3 col-md-2 sidebar sidebar-right sidebar-animate">
+		<div style="padding : 0px;" class="col-lg-12 layer_switcher"></div>
+	</div>
+	<div style="background: rgba(255,255,255, 1); top: 0px !important; box-shadow: 5px 0px 15px 1px rgba(50, 50, 50, 0.5);bottom : 1.5em; min-height : 0px;" class="col-xs-7 col-sm-3 col-md-2 sidebar sidebar-left sidebar-animate">
 	  <!--content-->
 	  <div style="padding: 10 0 10 0px; border-bottom: 1px solid rgba(0,0,0,0.6)" class="media">
 	  	<a class="media-left"><img src="/files/images/logo-ayunt.png"/></a>
 	  </div>
 	  <div style="padding: 0px" class="col-xs-12">
-	    <div class="menu-item col-xs-12"><a target="_blank" href="/"> <i class="fa fa-home"></i> Inicio</a></div>
-	    <div class="menu-item col-xs-12"><a target="_blank" href="/#servicios"> <i class="fa fa-cogs"></i> Servicios OGC</a></div>
-	    <div class="menu-item col-xs-12"><a target="_blank" href="http://192.168.1.14:8080/geonetwork"> <i class="fa fa-search"></i> Buscador Metadatos</a></div>
-	    <div class="menu-item col-xs-12"><a target="_blank" href="/#descargas"> <i class="fa fa-download"></i> Descargas</a></div>
+	    <div class="menu-item col-xs-12"><a target="_blank" href="/"> <i class="fa fa-home"></i> Inici</a></div>
+	    <div class="menu-item col-xs-12"><a target="_blank" href="/#servicios"> <i class="fa fa-cogs"></i> Serveis OGC</a></div>
+	    <div class="menu-item col-xs-12"><a target="_blank" href="http://192.168.1.14:8080/geonetwork"> <i class="fa fa-search"></i> Cercador Metadades</a></div>
+	    <div class="menu-item col-xs-12"><a target="_blank" href="/#descargas"> <i class="fa fa-download"></i> Descàrregues</a></div>
 	  </div>
 	</div>
 	
@@ -66,15 +73,21 @@
 	<!-- ================ -->
 	<div id="map" class="clearfix object-non-visible" data-animation-effect="fadeInRightBig">
 		
+		<div style="position: fixed; bottom: 0px; height: 1.5em; width : 100%; background: rgba(0,0,0,0.5); z-index: 1;"></div>
 		<!-- Boton abrir lateral -->
-		<ul>
+		<ul style="list-style : none;">
       	<li style="position: absolute; top: 8.5em; right: 0.5em;z-index: 1; border-radius: 5px;">
-        	<a class="navbar-toggle" data-toggle="sidebar" data-target=".sidebar" href="#" style="padding: 0px; margin: 0px;">
+        	<a class="navbar-toggle" data-toggle="sidebar" data-target=".sidebar-left" href="#" style="padding: 0px; margin: 0px;">
             	<i class="fa fa-navicon" style="font-size: 2em;"></i>
             </a>
         </li>
         </ul>
 
+        <div style="position : absolute; right : 0.5em; top : 2.5em; z-index : 1; background: #00bbff; border-radius : 2px;">
+        	<a data-toggle="sidebar" data-target=".sidebar-right" href="#" style="padding: 0px; margin: 0px;" class="navbar-toggle">
+        		<img src="/files/images/layers.svg"/>
+        	</a>
+        </div>
 		<!-- Popup Info -->
 		<div id="popup" class="ol-popup" style="min-width: 400px;">
 			<a href="#" id="popup-closer" class="ol-popup-closer"></a>
@@ -88,8 +101,12 @@
 <!-- Plugins Javascript situados al final de la página, así el contenido carga antes -->
 
 <!-- JQuery y Bootstrap -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+
+<script src="/javascripts/plugins/range-slider/jQDateRangeSlider-min.js"></script>
 
 <!-- Modernizr -->
 <script type="text/javascript" src="/javascripts/plugins/modernizr.js"></script>
@@ -113,10 +130,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.3.12/proj4.js"></script>
 
 <!-- OpenLayers.js -->
-<script src="/javascripts/plugins/ol3/ol.js"></script>
+<script src="/javascripts/plugins/ol3/build/ol.js"></script>
 
 <!-- LayerSwitcher JS -->
-<script src="/javascripts/plugins/ol3-layerswitcher/src/ol3-layerswitcher.js"></script>
+<script src="/javascripts/plugins/ol3-ext/control/layerswitchercontrol.js"></script>
+
+<script src="/javascripts/plugins/ol3-contextmenu/build/ol3-contextmenu.js"></script>
+
+<script src="/javascripts/plugins/ol3-geocoder/build/ol3-geocoder.js"></script>
 
 <!-- Estilos Features -->
 <script src="/javascripts/openlayers/style.js"></script>
@@ -125,7 +146,10 @@
 <script src="/javascripts/openlayers/proj.js"></script>
 
 <!-- Capas -->
-<script src="/javascripts/openlayers/capas.js"></script>	
+<script src="/javascripts/openlayers/capas.js"></script>
+
+<!-- Mapa -->
+<script src="/javascripts/openlayers/mapa.js"></script>	
 
 <!-- Bootstrap Select JS -->
 <script src="/javascripts/plugins/bootstrap-select/js/bootstrap-select.js"></script>
@@ -144,34 +168,15 @@ $("h1, h2").each(function(){
 	$(this).fitText(1.1, {maxFontSize: fontSize});
 });
 
+$('[data-target=".sidebar-right"]').click(function(){
+  $('.sidebar-left').removeClass('sidebar-open');
+});
+$('[data-target=".sidebar-left"]').click(function(){
+  $('.sidebar-right').removeClass('sidebar-open');
+});
+
 $(function(){
 	$('.dropdown-toggle').dropdown();
-});
-
-// MousePosition Control --> ol.control.MousePosition
-var mousePositionControl = new ol.control.MousePosition({
-    coordinateFormat: ol.coordinate.toStringHDMS,
-});
-
-// Mapa --> ol.Map
-var map = new ol.Map({
-	controls: ol.control.defaults({ 
-		attribution: false // No atribución
-	}).extend([mousePositionControl, // MousePosition
-	           new ol.control.FullScreen(), // FullScreen
-	           new ol.control.LayerSwitcher({tipLabel: 'Leyenda'}), // LayerSwitcher
-	           new ol.control.ScaleLine(), // ScaleLine
-	           new ol.control.ZoomSlider(), // ZoomSlider
-	]),
-	target: 'map',
-	view: new ol.View({
-		projection: proj,
-		zoom: 3,
-		center: ol.proj.fromLonLat([-0.47343, 39.42811], 'EPSG:4258'),
-		minZoom: 0,
-		maxZoom: 10
-		// Importante poner nuestra proyección, aunque es un parámetro opcional HAY QUE PONERLO!
-	})
 });
 
 denuncias_puntos.setVisible(false);
@@ -179,64 +184,12 @@ denuncias_lineas.setVisible(false);
 denuncias_poligonos.setVisible(false); 
 denunciasHeatMap.setVisible(false);
 
-map.addLayer(groupCapasBase); // Añadimos grupo de Capas 1
+//map.addLayer(groupCapasBase); // Añadimos grupo de Capas 1
 map.addLayer(groupCartoTorrentWMST); // Añadimos grupo de Capas 2
-map.addLayer(groupCartoTorrentWMS); // Añadimos grupo de Capas 2
+//map.addLayer(groupCartoTorrentWMS); // Añadimos grupo de Capas 2
 map.addLayer(torrent_cascada); // Añadimos grupo de Capas 3
 
-
-// Añadimos Control OverviewMap
-map.addControl(new ol.control.OverviewMap({
-	   layers: [new ol.layer.Tile(ignBase.getProperties())], 
-	   view: new ol.View({ // Importante añadir la View con nuestra proyección
-		   projection: proj  
-	   })
-}));
-
 ignBase.setVisible(false);
-
-var imprimir_mapa = function(){
-  map.once('postcompose', function(event) {
-    var canvas = event.context.canvas;
-    var image = new Image();
-    image.crossOrigin = "anonymous";
-    try {
-    	image.src = canvas.toDataURL('image/png');
-    }
-    catch(e){
-    	BootstrapDialog.show({
-    		title : 'Error exportando mapa', 
-    		message : 'Vuelva a recargar la página y pruebe otra vez. No añada capas de servidores externos.',
-    		onshow : function(dialog){$(dialog.getModalHeader()).css('background', 'rgb(200,50,50)')}
-    	});
-    }
-    //window.open(image.src);
-
-    var a = document.createElement('a');
-
-    a.setAttribute('href', image.src);
-    a.setAttribute('download', 'export_mapa_torrent.png');
-    a.setAttribute('target', 'blank_');
-
-    document.body.appendChild(a);
-    a.click();
-
-    map.renderSync();
-  });
-
-},
-contextmenu_items = [{
-    text: '<i class="fa fa-print"></i> Imprimir mapa',
-    callback: imprimir_mapa
-  },
-  '-' // Separador
-],
-contextmenu = new ContextMenu({
-  width: 190,
-  default_items: true,
-  items: contextmenu_items
-});
-map.addControl(contextmenu);
 
 $('[data-toggle="tab"]').popover({
     trigger: 'hover',
