[ULTIMOS REQTOQUES] - Bugs

--- a/geoportal/es/index.html
+++ b/geoportal/es/index.html
@@ -109,7 +109,7 @@
 												</ul>
 											</li>
 											<li><a href="/visor">Visor</a></li>
-											<li><a href=":8080/geonetwork">Buscador</a></li>
+											<li><a href="javascript:window.open(window.location.href.split(':3000')[0] + ':8081/geonetwork')">Buscador</a></li>
 											<li class="dropdown">
 												<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Más <span class="caret"></span></a>
 												<ul class="dropdown-menu" style="width : 100%">
@@ -203,7 +203,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<p>Desde el menú podrás acceder a los diferentes servicios web elaborados por el ayuntamiento de Torrent siguiendo los estándares aprobados por el <b>Open Geospatial Consortium (OGC)</b> para su uso en sistemas de información geográfica (SIG). Siguiendo estos estándares se intenta conseguir la integración y la interoperabilidad de grandes vólumenes de datos espacialmente referenciados (Información Geográfica).</p>
-								<p>Si lo deseas también puedes hacer uso de nuestro <span><a href="/visor">visor online</a></span> o buscar los recursos de su interés accediendo al <a href=":8080/geonetwork">catálogo de servicios</a></span>.</p>
+								<p>Si lo deseas también puedes hacer uso de nuestro <span><a href="/visor">visor online</a></span> o buscar los recursos de su interés accediendo al <a href="javascript:window.open(window.location.href.split(':3000')[0] + ':8081/geonetwork')">catálogo de servicios</a></span>.</p>
 							</div>
 							<div class="col-md-6">
 								<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -464,15 +464,15 @@ console.log(window.location.href.toString().split(window.location.port)[0]);
 		console.log(capa + features);
 		
 		if (capa == 'jahr:ortofoto') {
-			window.open(window.location.href.toString().split(window.location.port)[0] + '8001/geoserver/jahr/wms?service=WMS&version=1.1.0&request=GetMap&layers=jahr:ortofoto&styles=&bbox=703922.4219253492,4361457.771400001,721973.2836746508,4370702.237000001&width=768' +
+			window.open(window.location.href.toString().split(window.location.port)[0] + '8081/geoserver/jahr/wms?service=WMS&version=1.1.0&request=GetMap&layers=jahr:ortofoto&styles=&bbox=703922.4219253492,4361457.771400001,721973.2836746508,4370702.237000001&width=768' +
 					'&height=393&srs=EPSG:25830&format=' + $('#format').val());
 		}
 		else {
 			if (features == '')
-				window.open(window.location.href.toString().split(window.location.port)[0] + '8001/geoserver/jahr/ows?service=WFS&version=1.0.0' + 
+				window.open(window.location.href.toString().split(window.location.port)[0] + '8081/geoserver/jahr/ows?service=WFS&version=1.0.0' + 
 				'&request=GetFeature&typeName=' + capa + '&outputFormat=shape-zip');
 			else
-				window.open(window.location.href.toString().split(window.location.port)[0] + '8001/geoserver/jahr/ows?service=WFS&version=1.0.0' + 
+				window.open(window.location.href.toString().split(window.location.port)[0] + '8081/geoserver/jahr/ows?service=WFS&version=1.0.0' + 
 				'&request=GetFeature&typeName=' + capa + '&maxFeatures=' + features + '&outputFormat=shape-zip');		
 		}
 		
@@ -506,7 +506,7 @@ console.log(window.location.href.toString().split(window.location.port)[0]);
 	
 	// GetCapabilities Dialog
 	$('[id="capabilities"]').click(function(event){
-		var serviceURL = window.location.href.toString().split(window.location.port)[0] + '8001' + $(this).attr('service_url');
+		var serviceURL = window.location.href.toString().split(window.location.port)[0] + '8081' + $(this).attr('service_url');
 		var serviceName = $(this).attr('service_name');
 		
 		
@@ -558,7 +558,7 @@ console.log(window.location.href.toString().split(window.location.port)[0]);
 	
 	// Copy Service URL
 	$('[id="copy"]').click(function(event){
-		var service_url = window.location.href.toString().split(window.location.port)[0] + '8001' + $(this).attr('service_url');
+		var service_url = window.location.href.toString().split(window.location.port)[0] + '8081' + $(this).attr('service_url');
 	    var $temp = $("<input>")
 	    $("body").append($temp);
 	    $temp.val(service_url).select();
@@ -569,7 +569,7 @@ console.log(window.location.href.toString().split(window.location.port)[0]);
 	
 	// Go to Service
 	$('[id="ir"]').click(function(event){
-		window.open(window.location.href.toString().split(window.location.port)[0] + '8001' +  $(this).attr('service_url'));
+		window.open(window.location.href.toString().split(window.location.port)[0] + '8081' +  $(this).attr('service_url'));
 	});
 	
 </script>
