Hasta aquí hemos llegado

--- a/geoportal/en/descargas.html
+++ b/geoportal/en/descargas.html
@@ -64,7 +64,7 @@
   		<div style="padding: 0px" class="col-xs-12">
 		    <div class="menu-item col-xs-12"><a target="_blank" href="/"> <i class="fa fa-home"></i> Home</a></div>
 		    <div class="menu-item col-xs-12"><a target="_blank" href="/#servicios"> <i class="fa fa-cogs"></i> OGC Services</a></div>
-		    <div class="menu-item col-xs-12"><a target="_blank" href="http://192.168.1.14:8080/geonetwork"> <i class="fa fa-search"></i> Metadata Finder</a></div>
+		    <div class="menu-item col-xs-12"><a target="_blank" href="javascript: window.open(window.location.href.split(window.location.port)[0] + '8081/geonetwork');"> <i class="fa fa-search"></i> Metadata Finder</a></div>
 		    <div class="menu-item col-xs-12"><a target="_blank" href="/#descargas"> <i class="fa fa-download"></i> Downloads</a></div>
 		</div>
 	</div>
