--- a/geoportal/es/index.html
+++ b/geoportal/es/index.html
@@ -412,7 +412,6 @@
 							<div class="col-md-6 object-non-visible text-center" data-animation-effect="bounce">
 								<p>Una aplicación de geolocalización con la que podrás informar de denuncias, quejas y mejoras para Torrent.</p>
 								<p>Accede a la aplicación pulsando <a href="/app">aquí</a></p>
-						    	
 							</div>
 						</div>
 
@@ -449,8 +448,9 @@
 <!-- Bootstrap Select JS -->
 <script src="/javascripts/plugins/bootstrap-select/js/bootstrap-select.js"></script>
 
+
 <script type="text/javascript">
-console.log(window.location.href.toString().split(window.location.port)[0]);
+	//console.log(window.location.href.toString().split(window.location.port)[0]);
 	$('.selectpicker').selectpicker({
 		width: '100%'
 	}).selectpicker('mobile');
