--- a/geoportal/es/index.html
+++ b/geoportal/es/index.html
@@ -35,6 +35,23 @@
 <!-- Título -->
 <title>Geoportal de Torrent</title>
 
+<style type="text/css">
+  .banner_anim{
+    animation-name: test;
+    animation-duration: 5s;
+  }
+  @keyframes test {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+    }
+  }
+</style>
+
 </head>
 
 <body class="no-trans">
@@ -158,7 +175,7 @@
 	
 	<!-- banner start -->
 		<!-- ================ -->
-		<div id="banner" class="banner" style="background: url('https://images.unsplash.com/photo-1445964047600-cdbdb873673d?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1800&fit=max&s=e590407728cc89ef57f248ebec481dd5'); background-size: cover; background-position: center center; background-repeat: no-repeat">
+		<div id="banner" class="banner banner_anim" style="background: url('/files/images/fondos/geoportal/1.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat">
 			<div class="banner-image"></div>
 			<div class="banner-caption">
 				<div class="container">
@@ -411,7 +428,8 @@
 							</div>
 							<div class="col-md-6 object-non-visible text-center" data-animation-effect="bounce">
 								<p>Una aplicación de geolocalización con la que podrás informar de denuncias, quejas y mejoras para Torrent.</p>
-								<p>Accede a la aplicación pulsando <a href="/app">aquí</a></p>
+								<p>Accede a la aplicación pulsando <a href="/app">aquí</a>.</p>
+								<p>Accede desde <a href="/proyecto">aquí</a> al código fuente.</p>
 							</div>
 						</div>
 
@@ -571,6 +589,27 @@
 	$('[id="ir"]').click(function(event){
 		window.open(window.location.href.toString().split(window.location.port)[0] + '8081' +  $(this).attr('service_url'));
 	});
+
+	// Preload Imágenes
+	for(var i = 1; i <= 8; i++){
+		console.log('preload' + i);
+		$("<img />").attr("src", '/files/images/fondos/geoportal/' + i + '.jpg');
+	}
+
+	var i = 2;
+		setInterval(function(){
+			console.log('bg');
+			if(i > 8) i = 1;
+			$('#banner').addClass('banner_anim');
+			setTimeout(function(){
+			  $('#banner').css('background', "url(/files/images/fondos/geoportal/" + i + ".jpg)");
+			  $('#banner').css('background-size', "cover");
+			  $('#banner').css('background-repeat', "no-repeat");
+			  $('#banner').css('background-position', "center center");
+			  setTimeout(function(){$('#banner').removeClass('banner_anim');},2000);
+			  i++;
+			}, 200);
+	}, 10000);
 	
 </script>
 
